[ThreadedCompositor] position:fixed elements do not have their own layers when threaded compositor is enabled. https://bugs.webkit.org/show_bug.cgi?id=154100

Reviewed by Carlos Garcia Campos.

Currently, fixed elements are redrawn to a backing store every time layout or scroll happens.
It results in the bad effect on performance-wise. Letting fixed element have separate layers is
necessary when threaded compositor is enabled at least. Because async scrolling requires it.

* WebProcess/WebPage/DrawingAreaImpl.cpp:
(WebKit::DrawingAreaImpl::updatePreferences):


Canonical link: https://commits.webkit.org/172389@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196623 268f45cc-cd09-0410-ab3c-d52691b4dbfc